force-app/main/default/objects/Intake__c/fields/Amount_of_intakes__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_intakes__c</fullName>
    <label>Amount of intakes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>