force-app/main/default/objects/Intake__c/fields/Comment_on_intake__c.field-meta.xml
<CustomField>
    <fullName>Comment_on_intake__c</fullName>
    <label>Comment on intake</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>