force-app/main/default/objects/Intake__c/fields/Date_of_intake__c.field-meta.xml
<CustomField>
    <fullName>Date_of_intake__c</fullName>
    <label>Date of intake</label>
    <type>DateTime</type>
</CustomField>