force-app/main/default/objects/Intake__c/fields/Extra_information_from_hiring_manager__c.field-meta.xml
<CustomField>
    <fullName>Extra_information_from_hiring_manager__c</fullName>
    <label>Extra information from hiring manager</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>