force-app/main/default/objects/Intake__c/fields/Intake_name__c.field-meta.xml
<CustomField>
    <fullName>Intake_name__c</fullName>
    <formula>&apos;Intake - &apos; +  Application__r.Candidate_name__c + &apos; - &apos; + $Label.lbl_dateunknown</formula>
    <label>Intake name</label>
    <type>Text</type>
</CustomField>