force-app/main/default/objects/Intake__c/fields/Intake_name_display__c.field-meta.xml
<CustomField>
    <fullName>Intake_name_display__c</fullName>
    <formula>Intake_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake name display</label>
    <type>Text</type>
</CustomField>