force-app/main/default/objects/Intake__c/fields/Intake_number__c.field-meta.xml
<CustomField>
    <fullName>Intake_number__c</fullName>
    <label>Intake number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>