force-app/main/default/objects/Intake__c/fields/Intake_report_created__c.field-meta.xml
<CustomField>
    <fullName>Intake_report_created__c</fullName>
    <description>Timestamp created when intake report is done</description>
    <label>Intake report created</label>
    <type>DateTime</type>
</CustomField>