force-app/main/default/objects/Intake__c/fields/Name_of_candidate__c.field-meta.xml
<CustomField>
    <fullName>Name_of_candidate__c</fullName>
    <formula>Application__r.Candidate_name__c</formula>
    <label>Name of candidate</label>
    <type>Text</type>
</CustomField>