force-app/main/default/objects/Intake__c/fields/Position_intake_is_for__c.field-meta.xml
<CustomField>
    <fullName>Position_intake_is_for__c</fullName>
    <formula>Application__r.Position__r.Name</formula>
    <label>Position intake is for</label>
    <type>Text</type>
</CustomField>