force-app/main/default/objects/Intake__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intake requested</fullName>
                <default>true</default>
                <label>Intake requested</label>
            </value>
            <value>
                <fullName>Intake planned</fullName>
            </value>
            <value>
                <fullName>Intake done</fullName>
            </value>
            <value>
                <fullName>Invited for intake</fullName>
                <isActive>false</isActive>
                <label>Invited for intake</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>