force-app/main/default/objects/Intake__c/fields/Type_of_intake__c.field-meta.xml
<CustomField>
    <fullName>Type_of_intake__c</fullName>
    <label>Type of intake</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone call</fullName>
            </value>
            <value>
                <fullName>Online conversation</fullName>
            </value>
            <value>
                <fullName>Physical conversation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>